--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@ html, body, #root {
   margin: 0;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #f0f2f5; /* Un color de fondo suave para toda la app */
+  background-color: #c8cbcf; /* Un color de fondo suave para toda la app */
 }
