--- a/src/components/users/ChangePasswordModal.css
+++ b/src/components/users/ChangePasswordModal.css
@@ -8,9 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1000; /* <-- Asegúrate de que esta línea exista y tenga un valor alto */
 }
-
 .modal-container {
   background-color: var(--color-content-bg);
   padding: 30px;
